--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- font popins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap"
     rel="stylesheet">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <title>Desafio Tecnico</title>
 </head>
 
